<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator">alculator</string>
    <string name="c">C</string>
    <string name="todo">TODO</string>
    <string name="_0">0</string>
    <string name="todo1">TODO</string>
    <string name="dot">.</string>
    <string name="zeroDouble">00</string>
    <string name="zeroSingle">0</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="x">x</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="divide">/</string>
    <string name="percentage">%</string>
    <string name="ac">AC</string>
</resources>