<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/splashIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/calculator"
        android:layout_marginTop="-100dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="-100dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:textSize="100sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="60sp"/>

    </LinearLayout>

</LinearLayout>